# git_repo_search_engine

./: README.md
.github/workflows/: backend.yml
backend/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/api/: main.py
frontend/git-app/: package.json
frontend/git-app/src/pages/: _app.tsx  githubAPI.ts  globals.css  index.tsx  layout.tsx  page.client.tsx  repositories.tsx
frontend/my-app/: package-lock.json
